--- a/styles/layout.css
+++ b/styles/layout.css
@@ -14,6 +14,18 @@ main {
     max-width: 33rem;
     margin-left: auto;
   }
+
+  .back {
+    display: flex;
+    gap: 1.3rem;
+    margin-bottom: 1rem;
+  }
+
+
+  h1 {
+    font: 600 2.4rem/1.25 var(--font-family);
+    margin-bottom: 1rem;
+  }
 }
 
 aside {
@@ -22,5 +34,18 @@ aside {
 
   .aside-container {
     max-width: 31rem;
+
+    & > img {
+      margin-top: 2rem;
+    }
+  }
+
+  h2 {
+    font: 600 4rem/1.25 var(--font-family);
+    margin-bottom: 1rem;
+  }
+  
+  span {
+    color: var(--text-highlight);
   }
 }
