config input file

--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -1,3 +1,5 @@
+@import url(./droparea.css);
+
 input, textarea, select {
   appearance: none;
   width: 100%;
@@ -18,12 +20,12 @@ label {
 
 input:focus,
 select:focus,
-textarea:focus {
+textarea:focus,
+input[type="date"]:focus-within {
   outline: .2rem solid var(--surface-secondary);
   border: .110rem solid var(--stroke-highlight);
   outline-offset: .110rem ;
 }
-
 
 input[type="date"] {
   position: relative;
@@ -48,4 +50,8 @@ input[type="date"] {
 
 select {
   background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem);
+}
+
+textarea {
+  resize: none;
 }
