--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -55,3 +55,21 @@ select {
 textarea {
   resize: none;
 }
+
+.address .flex {
+  gap: 1rem;
+}
+
+.input-wrapper:has([disabled]) {
+  opacity: .5;
+}
+
+input {
+  &[disabled] {
+    background-color: var(--surface-disabled);
+
+    border: 1px solid var(--stroke-default);
+
+    color: var(--text-primary);
+  }
+}
