--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -72,4 +72,32 @@ input {
 
     color: var(--text-primary);
   }
+
+  &:invalid {
+    border: .1rem solid var(--semantic-error);
+  }
+
+  & + small {
+    font:var(--text-sm);
+
+    color: #78716C;
+
+    display: inline-block;
+
+    margin-top: 1rem;
+  }
+
+  &[required] + .error {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+
+    font: var(--text-sm);
+    color: var(--semantic-error);
+    margin-top: 1rem;
+  }
+
+  &:not(:focus):valid  + .error {
+    display: none;
+  }
 }
